# tracker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  Makefile  Procfile.dev  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: __main__.py  app.py  openapi.py
apps/api/routes/: audit.py  briefings.py  congressional.py  digest.py  digest_chat.py  health.py  portfolio.py
apps/cli/: __main__.py
apps/common/: composition.py  settings.py
apps/mcp/: server.py
apps/mcp/tools/: __init__.py  briefing.py  congressional.py  market.py  portfolio.py
apps/worker/: __init__.py  __main__.py  run_job.py
apps/worker/handlers/: drift_alert.py
apps/worker/jobs/: generate_briefing.py  generate_digest_job.py  ingest_congressional.py  pipeline_health.py  pipeline_health_runner.py  token_canary.py  token_canary_runner.py  vix_alert.py
data/: holdings-demo.json  holdings.example.json
docker/: backend.Dockerfile  garage.toml  web.Dockerfile
docs/: RECOMMENDATION_LEDGER_SPEC.md
infra/k8s/base/: api.yaml  cronjobs.yaml  holdings.yaml  postgres.yaml  secrets.yaml  web.yaml  worker.yaml
migrations/: env.py
migrations/versions/: 0003_recommendations.py  2026_06_21_0001_initial_schema.py  2026_06_24_0002_digests.py
scripts/: place_order.py  schwab_login.py  screenshots.mjs  seed_congressional_data.py  seed_demo.py
src/trading/domain/: __init__.py
tests/: conftest.py
tests/adapters/: test_edgar_client.py  test_edgar_parsing.py  test_garage_blob_store.py  test_massive_client.py  test_massive_parsing.py  test_notifications.py  test_persistence_smoke.py  test_quiver_client.py  test_quiver_parsing.py  test_schwab_client.py  test_schwab_parsing.py
tests/adapters/contracts/: test_broker_contract.py
tests/application/: test_generate_digest.py  test_generate_digest_recommendations.py  test_outbox_relay.py  test_place_order.py  test_refresh_positions.py
tests/apps/api/: test_api_smoke.py  test_audit.py  test_congressional_routes.py  test_digest_chat.py  test_portfolio_live.py
tests/apps/mcp/: test_mcp_read_only.py  test_tool_signatures.py
tests/apps/worker/: test_alerts.py  test_briefing_html.py  test_run_job.py  test_scheduler.py
tests/domain/: test_entities.py  test_event_types.py  test_value_objects.py
tests/e2e/: test_read_only_surface.py
web/: eslint.config.mjs  next.config.ts  openapi.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/src/__tests__/: AccountKpiCard.test.tsx  DisclosureCard.test.tsx  PositionsTable.test.tsx  openapi-schema.test.ts  setup.ts
web/src/api/: client.ts
web/src/app/: actions.ts  globals.css  page.tsx  (+1 more)
(+96 files in other folders)
