[project]
name = "tracker"
version = "0.1.0"
description = "Congressional portfolio & research tool — no live trade execution."
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "kcrawley" }]

dependencies = [
    # web / app
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # persistence
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    # mcp
    "mcp>=1.2",
    # jobs
    "apscheduler>=3.10",
    # schwab client (sync — bridged to async in adapter)
    "schwab-py>=1.3",
    # http / data adapters
    "httpx>=0.28",
    # blobs (garage is S3-compatible)
    "boto3>=1.35",
    # observability
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "opentelemetry-api>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49",
    # utils
    "python-dateutil>=2.9",
    "click>=8.1",
]

[project.scripts]
tracker = "apps.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading", "apps"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "apps", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET", "S", "PL"]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # assert in tests is fine
    "S603",   # subprocess calls audited case-by-case
    "S607",   # partial path — fine in controlled contexts
    "PLR0913", # too-many-arguments — domain constructors need fields
    "PLR2004", # magic-value-comparison — fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR", "B017"]
"migrations/**" = ["E", "F", "I", "N"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
files = ["src", "apps"]

[[tool.mypy.overrides]]
module = ["schwab.*", "apscheduler.*", "vcr.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "live_readonly: read-only calls against real Schwab (manual, env-gated)",
    "cassette: VCR-recorded HTTP replays",
    "slow: >1s",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-postgresql>=6.1",
    "vcrpy>=6.0",
    "hypothesis>=6.115",
    "types-python-dateutil",
    "boto3-stubs",
]
